ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jnp-ingress1
  annotations:
   kubernetes.io/ingress.global-static-ip-name: mimuw-lemons
   networking.gke.io/managed-certificates: mimlemons-cert-ssl 
   kubernetes.io/ingress.class: "gce"
   networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https  
spec:
  defaultBackend:
    service:
      name: jnp-frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: jnp-backend
            port:
              number: 80

      - path: /socket.io/
        pathType: Prefix
        backend:
          service:
            name: jnp-backend
            port:
              number: 80
